# realtime-translation-app

./: .gitignore  Agents.md  Audio_Streaming.md  Dockerfile  README.md  bot.py  index.html  requirements.txt  runner.py  server.py  youtube_streamer.py
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/glossary/: do_not_translate.tsv
backend/app/nlp/: segmenter.py  translator.py
backend/app/orchestration/: pipeline.py
backend/app/streaming/: ingest_ws.py  out_ws.py
backend/app/stt/: azure_stt.py
backend/app/tts/: azure_tts.py
backend/device/: mic_client.py  obs_audio_bridge.py  streamer.py
backend/ops/: docker-compose.yml
backend/web/: package-lock.json  package.json  tsconfig.json
backend/web/src/components/: AudioPlayer.tsx  PlasmaVisualizer.tsx  circular-waveform.tsx
backend/web/src/lib/: ws.ts
backend/web/src/pages/: index.tsx  listen.tsx  overlay.tsx
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  app.css
